added description to openapi.yml
